readme file created

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movieareas-api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "express": "^4.21.2"
   }
 }
